--- a/vignettes/simulation_study.Rmd
+++ b/vignettes/simulation_study.Rmd
@@ -171,7 +171,6 @@ sdl <- sim_data_list(
 sdl
 ```
 
-
 ## `sim_outcome_list()`
 
 `sim_outcome_list()` is where you input outcome details, for instance
@@ -240,3 +239,17 @@ sbl
 `sim_covariate_list()` is where you input details on which covariates to
 adjust for in your simulation study outcome models. Note that we did not
 simulate any covariates, so we will leave this argument empty.
+
+
+## `sim_treatment_list()`
+
+`sim_treatment_list()` is where you input the treatment details for a simulation study. Of most
+importance in this field is specifying the prior distribution for the treatment effect. Let's
+keep an uninformative prior in this example:
+
+```{r}
+stl <- sim_treatment_list(
+  list("Standard" = treatment_details("trt", normal_prior(0, 1000)))
+)
+stl
+```
