--- a/vignettes/simulation_study.Rmd
+++ b/vignettes/simulation_study.Rmd
@@ -37,19 +37,20 @@ we need to build an object of class `Simulation` using the function
 
 ```
 create_simulation_obj(
-  sim_data_list,
-  sim_outcome_list,
-  sim_borrowing_list,
-  sim_covariate_list,
-  sim_trt_list
+  data_list,
+  outcome,
+  borrowing,
+  covariate,
+  treatment
 )
 
 ```
 
-## `sim_data_list()`
+## `data_list`
 
-`sim_data_list()` is where you input the data you will be using for the
-simulation study. Let's simulate some data together for the sake of example.
+`data_list` is where you input the data you will be using for the
+simulation study using the function `sim_data_list()`.
+Let's simulate some data together for the sake of example.
 We'll use the `simsurv` package to generate survival data under two
 scenarios: a true hazard ratio (HR) for the treatment effect of 0.6 and a true
 HR of 0.8.
@@ -125,13 +126,14 @@ head(data_list[[1]][[1]])
 In order to summarize the results from the different parameters in
 your simulation study, `psborrow2` needs to know how the simulation parameters
 differ. That is the purpose of the argument `guide`, which is a data.frame
-that distinguishes the simulation study parameters. Two columns are required
-in `guide`, though many more can be provided. The two required columns are:
+that distinguishes the simulation study parameters. Three columns are required
+in `guide`, though many more can be provided. The three required columns are:
 
 * The true treatment effect (in our case a HR)
 * The true drift effect (in our case a HR). Drift effects >1 will mean
 that the external control arm experiences greater hazard than the internal
 control arm.
+* The name of a column that indexes the `data_list`
 
 In our study, the drift HR was 1.0. We varied the true HR so that it took
 two values: 0.6 and 0.8. Our guide should therefore be two rows to represent
@@ -140,23 +142,20 @@ the two scenarios:
 ```{r}
 guide <- data.frame(
   trueHR = c(0.6, 0.8),
-  driftHR = c(1.0, 1.0)
+  driftHR = c(1.0, 1.0),
+  index = 1:2
 )
 
 guide
 ```
 
-***Note*** the order is extremely important in `guide` and should correspond
-exactly to the order in your simulated data. For us, the scenario with
-a true HR of 0.6 was the first list element in our `data_list` and should
-therefore be the first row of `guide`.
+### `effect`, `drift`, and `index`
 
-### `effect` and `drift`
-
-The last two inputs to `sim_data_list()`, `effect` and `drift`
-are the column names in `guide` that correspond to the true treatment effect
-and true drift effect, respectively. For our study, these are `"trueHR"`
-and `"driftHR"`, respectively.
+The last three inputs to `sim_data_list()`, `effect`, `drift`, and `index`
+are the column names in `guide` that correspond to the true treatment effect,
+true drift effect, and index of the `data_list` items, respectively.
+For our study, these are `"trueHR"`, `"driftHR"`, and `"index"`,
+respectively.
 
 Putting it all together, we can create an object of class `SimDataList`:
 
@@ -165,7 +164,8 @@ sdl <- sim_data_list(
   data_list,
   guide,
   "trueHR",
-  "driftHR"
+  "driftHR",
+  "index"
 )
 
 sdl
@@ -253,3 +253,9 @@ stl <- sim_treatment_list(
 )
 stl
 ```
+
+## `create_simuilation_obj()`
+
+Now that we have all of the relevant inputs for `create_simulation_obj()`,
+let's call the function, which will generate and compile Stan models
+ready to sample on our behalf.
