--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -13,3 +13,18 @@
 	url = {http://dx.doi.org/10.1080/10543406.2021.2011743},
 	langid = {en}
 }
+
+@article{austin2013,
+	title = {The use of propensity score methods with survival or time{-}to{-}event outcomes: reporting measures of effect similar to those used in randomized experiments},
+	author = {Austin, Peter C.},
+	year = {2013},
+	month = {09},
+	date = {2013-09-30},
+	journal = {Statistics in Medicine},
+	pages = {1242--1258},
+	volume = {33},
+	number = {7},
+	doi = {10.1002/sim.5984},
+	url = {http://dx.doi.org/10.1002/sim.5984},
+	langid = {en}
+}
