--- a/vignettes/propensity_scores.Rmd
+++ b/vignettes/propensity_scores.Rmd
@@ -7,9 +7,10 @@ vignette: >
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 bibliography: references.bib
+link-citations: yes
 ---
 
-```{r, include = FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -19,13 +20,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
+```{r load, message=FALSE}
 library(psborrow2)
 ```
 
 Propensity scores (PS) methods offer various ways to adjust analyses for differences in groups of patients.
 
-@austin2013 discuss various approaches for using PS with survival analyses to obtain effect measures similar to
+@austin2013 discusses various approaches for using PS with survival analyses to obtain effect measures similar to
 randomized controlled trials.
 
 @wang2021 discuss using PS for IPTW, matching and stratification in combination with a Bayesian analysis. These methods
@@ -42,14 +43,14 @@ outcome and being in the internal/external group.
 The simplest approach for calculating PS is a logistic generalized linear model. First, let's load some demo data from
 `psborrow2`.
 
-```{r}
+```{r data}
 my_data <- example_surv
 head(my_data)
 ```
 
 Let's now fit a logistic generalized linear model and add the PS as an additional covariate.
 
-```{r}
+```{r glm}
 ps_model <- glm(ext ~ cov1 + cov2 + cov3, data = my_data, family = binomial)
 ps <- predict(ps_model, type = "response")
 my_data$ps <- ps
@@ -58,7 +59,7 @@ head(my_data)
 
 The calculated PS can be included as a covariate in the analysis object, for the "covariate adjustment" PS approach:
 
-```{r}
+```{r analysis_obj}
 data_mat <- create_data_matrix(
   my_data,
   covariates = c("cov1", "cov2", "cov3", "ps"),
@@ -92,8 +93,9 @@ For more complex PS analyses, we can use one of the dedicated R packages.
 
 The [PSweight](https://cran.r-project.org/package=PSweight) package can calculate PS using other model fitting
 approaches than the simple glm described above. It also provides some summary statistics and plots.
+For example we can use a generalized boosted regression model (gbm):
 
-```{r}
+```{r psweight}
 library(PSweight)
 my_data2 <- example_surv
 psw_model <- SumStat(ext ~ cov1 + cov2 + cov3, data = my_data2, method = "gbm")
@@ -102,19 +104,19 @@ summary(psw_model)
 
 A plot of the distributions shows there is good overlap between the scores between both groups.
 
-```{r}
+```{r psweight_plot, fig.show="hold", out.width="50%", results='hide', message = FALSE}
 plot(psw_model, type = "density")
 ```
 
 The PS values can be copied into the data set and the analysis object can be constructed as before.
 
-```{r, results='hide'}
+```{r covs, results='hide'}
 my_data2$ps <- psw_model$propensity[, 2]
 ```
 
 This package can also trim the data.
 
-```{r}
+```{r trim}
 psw_trimmed <- PStrim(ext ~ cov1 + cov2 + cov3, data = my_data2, delta = 0.1)
 psw_trimmed
 ```
@@ -123,7 +125,7 @@ Since there is a reasonable overlap between the data, only 5 patients were trimm
 
 As before this can be used for in the analysis by creating a suitable data matrix.
 
-```{r}
+```{r cov_mat}
 create_data_matrix(
   psw_trimmed$data,
   covariates = c("cov1", "cov2", "cov3", "ps"),
@@ -139,7 +141,7 @@ A variety of matching methods, including PS matching are implemented in the [Mat
 
 As described in the [Getting Started vignette](https://cran.r-project.org/web/packages/MatchIt/vignettes/MatchIt.html), it can be useful to check the imbalance before matching.
 
-```{r}
+```{r matchit}
 library(MatchIt)
 # No matching; constructing a pre-match matchit object
 no_match <- matchit(trt ~ cov1 + cov2 + cov3,
@@ -153,7 +155,7 @@ Here we are matching treated to untreated to select the most comparable control 
 
 Now we can try a 1:1 nearest matching approach.
 
-```{r}
+```{r matchit11}
 match_11 <- matchit(trt ~ cov1 + cov2 + cov3,
   data = example_surv,
   method = "nearest", distance = "glm"
@@ -161,11 +163,11 @@ match_11 <- matchit(trt ~ cov1 + cov2 + cov3,
 summary(match_11)
 ```
 
-```{r}
+```{r matchit_jitter}
 plot(match_11, type = "jitter", interactive = FALSE)
 ```
 
-```{r}
+```{r matchit_qq}
 plot(match_11,
   type = "qq", interactive = FALSE,
   which.xs = c("cov1", "cov2", "cov3")
@@ -176,7 +178,7 @@ Determining whether the balance after matching is appropriate is beyond the scop
 
 However, if you are happy with the results of the matching procedure, you can extract the data for use in psborrow2.
 
-```{r}
+```{r trimmed_mat}
 create_data_matrix(
   data = example_surv[match_11$weights == 1, ],
   covariates = c("cov1", "cov2", "cov3"),
@@ -185,3 +187,5 @@ create_data_matrix(
   trt_flag_col = "trt"
 )
 ```
+
+## References
